@@ -164,4 +164,6 @@ extern void stl_mirror_xz(stl_file *stl);
 extern void stl_open_merge(stl_file *stl, char *file);
 extern void stl_generate_shared_vertices(stl_file *stl);
 extern void stl_write_off(stl_file *stl, char *file);
+extern void stl_write_dxf(stl_file *stl, char *file, char *label);
+extern void stl_write_vrml(stl_file *stl, char *file);
 
